# phys-sim

./: .gitignore  Exercise.cpp  MassSpring  MassSpring.cpp  MassSpringPlot.ipynb  Scene.cpp  Scene.h  Spring.cpp  Spring.h  Vec2.h  euler.txt  lfrog.txt  symp.txt
FEM/: CMakeLists.txt  FEM.cpp  FEModel.cpp  FEModel.h  LinTriElement.cpp  LinTriElement.h  Makefile
FEM/report/: report.aux  report.tex
Fluid/: Exercise.cpp  Fluid2D.cpp  Fluid2D.h  FluidSim  FluidSim.cpp
Fluid/report/: Fluid.tex
Fluid/report/latex-build/: Fluid.aux  Fluid.blg
MassSpring/: CMakeLists.txt  Exercise.cpp  Makefile  MassSpring.cpp  Point.cpp  Point.h  README.md  analysis.py
MassSpring/report/: MassSpringPlot.aux  MassSpringPlot.tex  analysis.py
Pipe/: Exercise.cpp  Fluid2D.cpp  Fluid2D.h  Makefile  Pipe  Pipe.cpp  README.md  Scene.cpp  Scene.h  Vec2.h
report/: midpoint.txt
